--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,8 +10,22 @@
     }
   ],
   "dependencies": {
+    "com.microsoft.mixedreality.toolkit.foundation": "2.5.0",
+    "com.microsoft.mixedreality.toolkit.tools": "2.5.1",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ads": "3.4.9",
+    "com.unity.analytics": "3.3.5",
+    "com.unity.collab-proxy": "1.2.16",
+    "com.unity.ide.rider": "1.1.4",
+    "com.unity.ide.vscode": "1.2.2",
+    "com.unity.multiplayer-hlapi": "1.0.6",
+    "com.unity.purchasing": "2.1.1",
+    "com.unity.test-framework": "1.1.18",
     "com.unity.textmeshpro": "2.1.1",
+    "com.unity.timeline": "1.2.6",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "2.1.4",
     "com.unity.xr.windowsmr.metro": "4.2.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -43,9 +57,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.microsoft.mixedreality.toolkit.foundation": "2.5.0",
-    "com.microsoft.mixedreality.toolkit.tools": "2.5.0",
-    "com.microsoft.mixedreality.toolkit.examples": "2.5.0"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
